# rag-mastery

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
01-naive-rag/: Makefile  README.md  config.py  main.py  pyproject.toml  services.yaml
02-multimodal-rag/: Makefile  README.md  pyproject.toml  services.yaml
02-multimodal-rag/src/multimodal_rag/: __init__.py  __main__.py  config.py  exceptions.py
02-multimodal-rag/src/multimodal_rag/cli/: __init__.py  app.py
02-multimodal-rag/src/multimodal_rag/pipelines/: __init__.py  multimodal.py
02-multimodal-rag/src/multimodal_rag/services/: __init__.py  document_loader.py  embeddings.py  generator.py  image_processor.py  retriever.py  vector_store.py
02-multimodal-rag/tests/: __init__.py  conftest.py
02-multimodal-rag/tests/integration/: __init__.py  test_pipeline.py
02-multimodal-rag/tests/unit/: __init__.py  test_config.py
03-hyde-rag/: Makefile  README.md  pyproject.toml
03-hyde-rag/src/hyde_rag/: __init__.py  __main__.py  config.py  exceptions.py
03-hyde-rag/src/hyde_rag/cli/: __init__.py  app.py
03-hyde-rag/src/hyde_rag/pipelines/: __init__.py  hyde.py
03-hyde-rag/src/hyde_rag/services/: __init__.py  document_loader.py  embeddings.py  generator.py  hypothetical_generator.py  retriever.py  vector_store.py
03-hyde-rag/tests/: __init__.py  conftest.py
03-hyde-rag/tests/integration/: test_pipeline.py
03-hyde-rag/tests/unit/: test_config.py
04-corrective-rag/: Makefile  README.md  pyproject.toml
04-corrective-rag/src/corrective_rag/: __init__.py  __main__.py  config.py  exceptions.py
04-corrective-rag/src/corrective_rag/cli/: __init__.py  app.py
04-corrective-rag/src/corrective_rag/pipelines/: __init__.py  corrective.py
04-corrective-rag/src/corrective_rag/services/: __init__.py  document_loader.py  embeddings.py  generator.py  grader.py  retriever.py  vector_store.py
04-corrective-rag/tests/: __init__.py  conftest.py
04-corrective-rag/tests/integration/: test_pipeline.py
04-corrective-rag/tests/unit/: test_config.py
05-graph-rag/: Makefile  README.md  pyproject.toml  services.yaml
05-graph-rag/src/graph_rag/: __init__.py  __main__.py  config.py  exceptions.py
05-graph-rag/src/graph_rag/cli/: __init__.py  app.py
05-graph-rag/src/graph_rag/pipelines/: __init__.py  graph.py
05-graph-rag/src/graph_rag/services/: __init__.py  document_loader.py  embeddings.py  entity_extractor.py  generator.py  knowledge_graph.py  retriever.py  vector_store.py
05-graph-rag/tests/: __init__.py  conftest.py
05-graph-rag/tests/integration/: test_pipeline.py
05-graph-rag/tests/unit/: test_config.py
06-hybrid-rag/: Makefile  README.md  pyproject.toml  services.yaml
06-hybrid-rag/src/hybrid_rag/: __init__.py  __main__.py  config.py  exceptions.py
06-hybrid-rag/src/hybrid_rag/cli/: __init__.py  app.py
06-hybrid-rag/src/hybrid_rag/pipelines/: __init__.py  hybrid.py
06-hybrid-rag/src/hybrid_rag/services/: __init__.py  document_loader.py  embeddings.py  fusion.py  generator.py  keyword_search.py  retriever.py  vector_store.py
06-hybrid-rag/tests/: conftest.py
06-hybrid-rag/tests/integration/: test_pipeline.py
06-hybrid-rag/tests/unit/: test_config.py
07-adaptive-rag/: Makefile  README.md  pyproject.toml
07-adaptive-rag/src/adaptive_rag/: __init__.py  __main__.py  config.py  exceptions.py
07-adaptive-rag/src/adaptive_rag/cli/: __init__.py  app.py
07-adaptive-rag/src/adaptive_rag/pipelines/: __init__.py  adaptive.py
07-adaptive-rag/src/adaptive_rag/services/: __init__.py  document_loader.py  embeddings.py  generator.py  query_classifier.py  retriever.py  vector_store.py
07-adaptive-rag/tests/: __init__.py  conftest.py
07-adaptive-rag/tests/integration/: __init__.py  test_pipeline.py
07-adaptive-rag/tests/unit/: __init__.py  test_config.py
scripts/infra/: destroy.sh  start.sh  status.sh  stop.sh
scripts/project/: run.sh
terraform/: main.tf  outputs.tf  variables.tf
terraform/environments/dev/: backend.tf  main.tf
terraform/modules/chromadb/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/neo4j/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf
terraform/modules/ollama/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf
tests/: conftest.py
tests/benchmarks/: __init__.py  test_performance.py
tests/integration/: __init__.py  test_rag_pipeline.py
tests/unit/: test_adaptive_rag.py  test_corrective_rag.py  test_graph_rag.py  test_hybrid_rag.py  test_hyde_rag.py  test_multimodal_rag.py  test_naive_rag.py
